--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "jest": "^25.1.0"
   },
-  "repository": "github:saltcorn/statistics",
+  "repository": "github:gianlucafiore/statistics",
   "jest": {
     "testEnvironment": "node"
   },
